# inverse-rt

./: .gitattributes  .gitignore  README.md  entrypoint.py  index.html  main.js
backend/: project_manager.py  test.txt
frontend/: main.js  (+4 more)
rust-react/backend/: Cargo.toml  api.http
rust-react/backend/scan-projects/corner01/scans/scan00/: T_wc.npy  T_wl.npy  pose.npy
rust-react/backend/scan-projects/corner01/scans/scan01/: T_wc.npy  T_wl.npy  pose.npy
rust-react/backend/scan-projects/corner01/scans/scan02/: T_wc.npy  T_wl.npy  pose.npy
rust-react/backend/scan-projects/corner01/scans/scan03/: T_wc.npy  T_wl.npy  pose.npy
rust-react/backend/scan-projects/corner01/scans/scan04/: T_wc.npy  T_wl.npy  pose.npy
rust-react/backend/src/: appstate.rs  expose_assets.rs  lib.rs  main.rs  main_api.rs  project_pc.rs
rust-react/backend/src/api/: common_api.rs  expose_assets.rs  geometry_query.rs  mod.rs  project_settings.rs
rust-react/backend/src/appstate/: bvh_handler.rs  geometry.rs  kdtree_handler.rs  mod.rs
rust-react/backend/src/appstate/geometry/: kdtree_handler.rs
rust-react/backend/src/geometry/: constraint_vec.rs  mod.rs  normal_est.rs  project_pc.rs  project_pc_old.rs
rust-react/backend/src/geometry/common/: common_types.rs  file_utils.rs  helpers.rs  image_utils.rs  mod.rs  vec.rs  view_geo.rs
rust-react/backend/src/geometry/normal_estimation/: mod.rs  normal_est.rs  normal_est_ind_scan.rs
rust-react/backend/src/geometry/optim/: bvh_handler.rs  kdtree_handler.rs  kdtree_scan_vec.rs  mod.rs
rust-react/backend/src/main_api/: helpers.rs  project_pc.rs
(+462 files in other folders)
