[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
lodepng = "3.6.1"
kd-tree = "0.4.1"
bvh = "0.6.0"
rgb = "0.8.31"
nalgebra = "0.30.1"
ndarray = "0.15.4"
glob = "0.3.0"
rayon = "1.5.1"
ndarray-npy = "0.8.1"
serde = "1"
actix-files = "0.5.0"